fix api bugs
